--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hayagreev.github.io",
+  "homepage": "http://hayagreev.github.io/",
   "name": "3dfolio",
   "private": true,
   "version": "0.0.0",
